begin work on api

--- a/gui/src/main/templates/SubsystemExtensions.tmpl
+++ b/gui/src/main/templates/SubsystemExtensions.tmpl
@@ -3,5 +3,8 @@ package org.jboss.as.console.client.shared;
 
 public class SubsystemExtensions {
 
+<#list subsystemExtensions as subsystem>
+    // ${subsystem.getToken()} -> ${subsystem.getType()}
+</#list>
 
 }
